--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "msmtp-1.4.28.tar.bz2": 3fd44b30e8f4ae071b2a5a205d6007f3465fa970
+  msmtp-1.8.4.tar.xz: 9b0b9326adda804e08548e53e5e00732ae0669d9
